fix: picker: fix flicker on resize, update buttons, and font weight to match latest design (#410)

--- a/src/components/Trigger/trigger.module.scss
+++ b/src/components/Trigger/trigger.module.scss
@@ -1,16 +1,124 @@
 .trigger-popup {
     position: absolute;
-    left: -9999px;
     top: -9999px;
-    z-index: 1050;
+    left: -9999px;
+    z-index: $z-index-top;
 
     &-hidden {
-        opacity: 0;
-        pointer-events: none;
+        display: none;
     }
 
+    // Picker styles
+    .picker-range-arrow {
+        position: absolute;
+        left: $picker-arrow-size;
+        z-index: 1;
+        width: $picker-arrow-size;
+        height: $picker-arrow-size;
+        margin-left: $space-xs;
+        transition: all 0.3s;
+
+        &:before,
+        &:after {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            box-sizing: border-box;
+            transform: translate(-50%, -50%);
+            content: '';
+        }
+
+        &:before {
+            width: $picker-arrow-size;
+            height: $picker-arrow-size;
+            border: calc($picker-arrow-size / 2) solid $picker-background-color;
+            border-color: $picker-background-color $picker-background-color
+                transparent transparent;
+        }
+
+        &:after {
+            width: $picker-arrow-size - $space-xxxs;
+            height: $picker-arrow-size - $space-xxxs;
+            border: calc(calc($picker-arrow-size - $space-xxxs) / 2) solid
+                $picker-background-color;
+            border-color: $picker-background-color $picker-background-color
+                transparent transparent;
+        }
+    }
+
+    &-placement-bottomLeft,
+    &-placement-bottomRight {
+        .picker-range-arrow {
+            bottom: unset;
+            top: 1px;
+            transform: rotate(-45deg);
+        }
+    }
+
+    &.slide-up-enter.trigger-popup-placement-bottomLeft,
+    &.slide-up-enter.trigger-popup-placement-bottomRight {
+        animation-name: slideUpIn;
+        animation-duration: $motion-duration-fast;
+        animation-timing-function: $motion-easing-easeout;
+    }
+
+    &.slide-up-leave.trigger-popup-placement-bottomLeft,
+    &.slide-up-leave.trigger-popup-placement-bottomRight {
+        animation-name: slideUpOut;
+        animation-duration: $motion-duration-fast;
+        animation-timing-function: $motion-easing-easein;
+    }
+
+    &-placement-topLeft,
+    &-placement-topRight {
+        .picker-range-arrow {
+            bottom: $space-xxxs;
+            top: unset;
+            transform: rotate(135deg);
+        }
+    }
+
+    &.slide-up-enter.trigger-popup-placement-topLeft,
+    &.slide-up-enter.trigger-popup-placement-topRight {
+        animation-name: slideDownIn;
+        animation-duration: $motion-duration-fast;
+        animation-timing-function: $motion-easing-easeout;
+    }
+
+    &.slide-up-leave.trigger-popup-placement-topLeft,
+    &.slide-up-leave.trigger-popup-placement-topRight {
+        animation-name: slideDownOut;
+        animation-duration: $motion-duration-fast;
+        animation-timing-function: $motion-easing-easein;
+    }
+
+    &-range {
+        padding: ($picker-arrow-size * 2 / 3) 0;
+
+        &-hidden {
+            display: none;
+        }
+    }
+
+    &-rtl {
+        .picker-range-arrow {
+            right: $picker-arrow-size;
+            left: unset;
+            margin-right: 10px;
+            margin-left: 0;
+
+            &:before,
+            &:after {
+                right: 50%;
+                left: auto;
+                transform: translate(50%, -50%);
+            }
+        }
+    }
+
+    // Assert styles
     @mixin effect() {
-        animation-duration: 0.3s;
+        animation-duration: $motion-duration-fast;
         animation-fill-mode: both;
     }
 
@@ -18,13 +126,13 @@
     &-zoom-appear {
         opacity: 0;
         @include effect();
-        animation-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+        animation-timing-function: $motion-easing-easeout;
         animation-play-state: paused;
     }
 
     &-zoom-leave {
         @include effect();
-        animation-timing-function: cubic-bezier(0.6, -0.3, 0.74, 0.05);
+        animation-timing-function: $motion-easing-easein;
         animation-play-state: paused;
     }
 
@@ -37,31 +145,6 @@
     &-zoom-leave &-zoom-leave-active {
         animation-name: triggerZoomOut;
         animation-play-state: running;
-    }
-
-    @keyframes triggerZoomIn {
-        0% {
-            opacity: 0;
-            transform-origin: 50% 50%;
-            transform: scale(0, 0);
-        }
-        100% {
-            opacity: 1;
-            transform-origin: 50% 50%;
-            transform: scale(1, 1);
-        }
-    }
-    @keyframes triggerZoomOut {
-        0% {
-            opacity: 1;
-            transform-origin: 50% 50%;
-            transform: scale(1, 1);
-        }
-        100% {
-            opacity: 0;
-            transform-origin: 50% 50%;
-            transform: scale(0, 0);
-        }
     }
 }
 
